--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -1,7 +1,7 @@
 # Klaseak
 
-Klaseek objektuei zuzendutako programazioa izeneko teknika aplikatzeko aukera ematen digute. Arazo konplexuak konpontzeko beste estrategia bat da.
-Funtzioekin, arazo bat arazo txikietan banatzen dugu. Aldiz, objektuetara zuzendutako programazioarekin, arazoa klasetan banatzen saiatzen gara. Baina nola? Arazoaren zati den guztia irudikatuz, klaseak erabiliz. Hots, arazoan existitzen diren gauzak objektuak bilakatuz.
+Klaseek **objektuei zuzendutako programazioa** izeneko teknika aplikatzeko aukera ematen digute. Arazo konplexuak konpontzeko beste estrategia bat da.
+Funtzioekin, arazo bat arazo txikietan banatzen dugu. Aldiz, objektuetara zuzendutako programazioarekin, arazoa klasetan banatzen saiatzen gara. Baina nola? Arazoaren zati den guztia irudikatuz, klaseak erabiliz. Hots, arazoan existitzen diren gauzak objektuak bilakatuz!
 
 Demagun Mario Kart bezalako lasterketa joko baten programa egin behar dugula. Objektuetara zuzendutako programazioa erabiliz, jokoaren elementuak honako klase hauekin irudika ditzakegu:
 
@@ -11,9 +11,9 @@ Demagun Mario Kart bezalako lasterketa joko baten programa egin behar dugula. Ob
 
 ## Nola sortu klaseak
 
-Klase bat programazio egitura bat da, entitate bat bere propietate eta metodoekin errepresentatzeko aukera ematen diguna. Hau da, klase bat:
+Klase bat programazio egitura bat da, **gauza bat** bere propietate eta metodoekin errepresentatzeko aukera ematen diguna. Hau da, klase batek:
 
-- Atributu edo propietateak ditu: berezko aldagaiak.
+- Atributu edo propietateak ditu: klasearen aldagaiak.
 - Gauzak egiten ditu: funtzioak.
 
 Adibidez, hurrengo klaseak katu oso sinple bat errepresentatzen du, miauka egiteko funtzio batekin:
@@ -26,11 +26,11 @@ class Katua:
 
 Ikus daitekeenez, klasea definitzeko, `class` hitza erabiliko dugu, eta, ondoren, klasearen izena, lehenengo letra larriz. Bloke horren barruan doan guztia klasearen parte izango da.
 
-Bestalde, kontuan izan behar duzu  klase baten funtzio **guztiek**  `self` parametro berbera izan behar dituztela, nahiz eta ez erabili. Parametro hori klaseari berari dagokio, eta haren propietateei eta funtzioei erreferentzia egiteko erabiltzen da, orain ikusiko dugun bezala.
+Bestalde, kontuan izan behar duzu  klase baten funtzio **guztiek**  `self` parametro berbera izan behar ditutela, nahiz eta ez erabili. Parametro hori klaseari berari dagokio, eta haren propietateei eta funtzioei erreferentzia egiteko erabiltzen da, gero ikusiko dugun bezala.
 
 ## Klasea vs instantzia
 
-Klasea katuaren definizioa besterik ez da. Baina gure programan katu bat sortzeko, instantzia bat sortu behar dugu. Honela egiten da:
+Klasea katuaren definizioa besterik ez da. Baina gure programan katu bat sortzeko, **instantzia** bat sortu behar dugu. Honela egiten da:
 
 ```python
 katu = Katua()
@@ -43,7 +43,7 @@ Pantailan honako hauek ikusiko ditugu:
 Miau
 ```
 
-Instantzia objektu zehatz bat da. Klasea definizioa baino ez da: katu batek izena eta `miaukatu` ditu. Instantzia objektu zehatz bat da: `katu`.
+Instantzia objektu zehatz bat da. Klasea definizioa baino ez da: katu batek izena eta `miaukatu` funtzioa ditu. Instantzia objektu zehatz bat da: `katu`.
 
 5.0 Ariketa
 
@@ -108,7 +108,7 @@ Miau, Cheto naiz.
 
 5.1 Ariketa
 
-Idatzi programa bat `Kaixo` izeneko klase bat definitzeko. Klaseak funtzio eraikitzaile bat izan behar du, `agurra` izeneko atributu batekin. Atributu hori "kaixo" hitzarekin hasiko da. Horrez gain, `esanKaixo` izeneko metodo bat erantsiko duzu, eta, pantailan, agurraren edukia erakutsiko du.
+Idatzi programa bat `Kaixo` izeneko klase bat definitzeko. Klaseak funtzio eraikitzaile bat izan behar du, `agurra` izeneko atributu batekin. Atributu hori `"kaixo"` hitzarekin hasiko da. Horrez gain, `esanKaixo` izeneko metodo bat erantsiko duzu, eta, pantailan, agurraren edukia erakutsiko du.
 
 ```python
 class Kaixo:
@@ -157,7 +157,7 @@ Miau, Lucifur naiz.
 
 ## super()
 
-Azpiklase bat edo klase bat beste baten semea sortzen duzunean, heredatzen duzun klasetik `super()` funtzioa erabil dezakezu oinordetzan hartutako klasearen funtzioei deitzeko.
+Azpiklase bat edo klase bat beste baten _semea_ sortzen duzunean, heredatzen duzun klasetik `super()` funtzioa erabil dezakezu oinordetzan hartutako klasearen funtzioei deitzeko.
 Adibidez, aurreko kasuan, `Katakumea` azpimailatik berezko eraikitzaile bat gehi genezake, eta `Katua` superklasearen eraikitzaileari ere dei diezaiokegu:
 
 ```python
@@ -203,13 +203,13 @@ Kiwi ['A', 'C']
 
 ## Enkapsulazioa
 
-Katuaren adibidean, zuzenean sar daiteke izena jabetzara. Horretarako, objektuetan nahikoa da horrelako zerbait jartzea:
+Katuaren adibidean, zuzenean sar daiteke `izena` propietatea. Horretarako, objektuetan nahikoa da horrelako zerbait jartzea:
 
 ```python
 objektua.AtributuIzena
 ```
 
-Katuak izena izeneko propietate bat du.
+Katuak `izena` izeneko propietate bat du.
 
 ```python
 nireKatua = Katua("Pixi")
@@ -218,10 +218,10 @@ nireKatua.izena = "Pixel"
 nireKatua.miaukatu () #Miau, Pixel naiz
 ```
 
-Propietate bat hain zuzenean eskuratzea ez dago gaizki, baina programatzaile onak klasea kapsulatzen saiatzen dira. Zer esan nahi du horrek? Ezin direla zuzenean haren propietateak irakurri edo aldatu. Klasea erabiltzen dutenentzat beharrezkoa dena bakarrik eskeini behar zaie.
+Propietate bat hain zuzenean eskuratzea ez dago gaizki, baina programatzaile onak klasea _kapsulatzen_ saiatzen dira. Zer esan nahi du horrek? Ezin direla zuzenean haren propietateak irakurri edo aldatu. Klasea erabiltzen dutenentzat beharrezkoa dena bakarrik eskeini behar zaie.
 Bestela esanda, programatzaileek "kutxa beltzak" diruditen klaseak sortzen saiatu behar dute. Izena bezalako propietateen kasuan, Python-en metodo hauek gehitu daitezke:
 
-Izenaren jabetzaren balioa itzultzeko metodo bat, "getter" ere esaten zaiona:
+Izenaren jabetzaren balioa itzultzeko metodo bat, _getter_ ere esaten zaiona:
 
 ```python
   @property
@@ -229,7 +229,7 @@ Izenaren jabetzaren balioa itzultzeko metodo bat, "getter" ere esaten zaiona:
     return self._izena
 ```
 
-Izenaren balioa aldatu ahal izateko metodo bat, "setter" ere esaten zaiona:
+Izenaren balioa aldatu ahal izateko metodo bat, _setter_ ere esaten zaiona:
 
 ```python
 @izena.setter
@@ -263,14 +263,14 @@ Orain, `Katua` izeneko klasea erabiltzen dugunean, funtzio berri horien bidez eg
 
 ```python
 nireKatua = Katua ("Pixi")
-print (nireKatua.izena) # deitu `def izena ()` metodora:
-nireKatua.izena = "Pixel" #deitu `def izena (izena) metodora:
+print (nireKatua.izena) # deitu `def izena ()` metodora
+nireKatua.izena = "Pixel" #deitu `def izena (izena) metodora
 nireKatua.miaukatu () # Miau, ni naiz Pixel
 ```
 
 5.3 Ariketa
 
-Idatz ezazu `Ibilgailua` klasea definituko duen programa bat, `matrikula` atributuarekin, get/set metodoekin eta `abiarazi` izeneko beste metodo batekin. Sortu `Kotxea` izeneko azpiklase bat, `Ibilgailua` klasea zabaltzeko, zein eraikitzaile batean `matrikula`, `modeloa` eta `kolorea` jasoko ditu, eta informazio guztia itzultzeko funtzio bat izango du. Sortu instantzia bat `Kotxea` klasea probatzeko.
+Idatz ezazu `Ibilgailua` klasea definituko duen programa bat, `matrikula` atributuarekin, _getter/setter_ metodoekin eta `abiarazi` izeneko beste metodo batekin. Sortu `Kotxea` izeneko azpiklase bat, `Ibilgailua` klasea zabaltzeko, zein eraikitzaile batean `matrikula`, `modeloa` eta `kolorea` jasoko dituen, eta informazio guztia itzultzeko funtzio bat izango duena. Sortu instantzia bat `Kotxea` klasea probatzeko.
 
 ```python
 class Ibilgailua:
@@ -312,13 +312,13 @@ Emaitza:
 0042ASI Opel Corsa Zuria
 ```
 
-Zer abantaila izan dezake kapsularatzeak?
+Zer abantaila izan dezake enkapsulazioak?
 
-Funtsean, "kanpotik" ezin da klase kontrolik gabe manipulatu. Horregatik kutxa beltz bat bezalakoa da.
-Bideo-kontsola batekin alderatu daiteke. Joko bat jokatzeko eskuz ireki eta soldatu beharko bazenu, ziurrenik kontsola apurtuko zenuke. Horregatik, aparatuak kutxa beltz gisa diseinatzen dira, kanpotik manipulatzeko aukera batzuk baino ez dizute ematen.
-`Katua` klasearen kasuan, ez dugu uzten izena zuzenean aldatzen. "Setter" funtzioaren bidez, esleitu nahi den izena zuzena dela kontrola dezakegu.
+Funtsean, "kanpotik" ezin da objektua kontrolik gabe manipulatu. Horregatik kutxa beltz bat bezalakoa da.
+Bideo-kontsola batekin konparatu daiteke. Joko bat jokatzeko eskuz ireki eta soldatu beharko bazenu, ziurrenik kontsola apurtuko zenuke. Horregatik, aparatuak kutxa beltz gisa diseinatzen dira, kanpotik manipulatzeko aukera batzuk baino ez dizute ematen.
+`Katua` klasearen kasuan, ez dugu uzten izena zuzenean aldatzen. _setter_ funtzioaren bidez, esleitu nahi den izena zuzena dela kontrola dezakegu.
 
-## Beste mota batzuk dituzten klaseak
+## Klaseak klase barruan
 
 Objektuetara zuzendutako programazioarekin, klaseen bidez mundu errealeko gauzak irudikatzen saiatzen gara. Eta klase horiek bata bestearekin lotuta egon daitezke.
 
@@ -362,7 +362,7 @@ Diseinuak behar bezain konplexuak izan daitezke behar duguna irudikatzeko.
 
 5.4 Ariketa
 
-Idatz ezazu programa bat, `Pilotoa` eta `get/set` funtzioak dituena. Era berean, sor ezazu `Hegazkina` izeneko klase bat, `modeloa`, `pilotoa` eta `kopilotoa` atributuarekin, `get/set` funtzioekin modelorako, eta `info` metodo batekin atributuen balioak pantailaratzeko. Sortu instantzia bat bi klaseak probatzeko.
+Idatz ezazu programa bat, `Pilotoa` eta `get/set` funtzioak dituena. Era berean, sor ezazu `Hegazkina` izeneko klase bat, `modeloa`, `pilotoa` eta `kopilotoa` atributuarekin, `get/set` funtzioekin, eta `info` metodo batekin atributuen balioak pantailaratzeko. Sortu instantzia bat bi klaseak probatzeko.
 
 ```python
 
@@ -409,7 +409,7 @@ print(hegazkinTxikia.info())
 Emaitza:
 
 ```console
-Hegan AirBluff 727 Han Solo Murdockekin
+AirBluff 727 modeloa, Han Solo eta Murdockekin hegaldia egiten
 ```
 
 ## Metodo estatikoak
@@ -420,7 +420,7 @@ Normalean, klase bat erabili ahal izateko, haren instantzia bat sortzen dugu bet
 ikasleBat = Ikaslea ("Gumball")
 ```
 
-Batzuetan, agian, kopiarik egin nahi ez dugun klase bat sortu nahi dugu, zeregin zehatz bat egiteko bakarrik balio duena, funtzio bat balitz bezala.
+Batzuetan, agian, kopiarik egin nahi ez dugun klase bat sortu nahi dugu, zeregin zehatz bat egiteko bakarrik balio duena. Funtzio bat balitz bezala.
 
 Adibidez, izen bat emanda, formatu zuzena ematen dion klase bat egin dezakegu, lehenengo letra larriarekin eta gainerako letra xeheekin:
 
@@ -441,7 +441,7 @@ Gumball
 
 5.5 Ariketa
 
-Idatzi programa bat, `Zenbakia` izeneko klase bat definituko duena, eta funtzio estatiko bat, `ausazkoa (max)` izenekoa. Funtzio honek zenbaki bat itzuli behar du 0 eta `max` tarteen barruan.
+Idatzi programa bat, `Zenbakia` izeneko klase bat definituko duena, eta funtzio estatiko bat, `ausazkoa (max)` izenekoa. Funtzio honek zenbaki bat itzuli behar du `0` eta `max` tarteen barruan.
 
 ```python
 import random
@@ -467,12 +467,16 @@ Emaitza:
 ADI
 Zergatik egin klase bat horrelako funtzio batekin eta ez zuzenean funtzio batekin? klase batean egitea baliagarria izan daiteke leku berean funtzio estatiko bat edo gehiago sartu nahi ditugunean, eta ez ditugu instantzia desberdinak sortu nahi, funtzio zehatzak erabili baizik.
 
+ADI
+Ez ahaztu klaseak eta objektuei zuzendutako programazioa diseinu estilo bat dela:
+kasu askotan, programaren erabilera errazteko eta kodea modu argiagoan banatzeko erabiltzen dira. Hasieran azaldu den bezala, arazoak konpontzeko bide bat eskeintzen digute.
+
 ## Proposatutako ariketak
 
 5.0 Ariketa
 
-Idatzi `Instrumentua` izeneko klase bat definitzen duen programa bat. Eraikitzaileak parametro hauek izan behar ditu, hurrenez hurren: `izena` eta `mota`. Gainera, `jo`  izeneko funtzio bat gehitu behar duzu, mezu bat eta beste dei bat aterako dituena, atributuen informazioa duen testu bat itzultzeko.
-Sortu gelako instantzia bat eta deitu bere funtzioetara.
+Idatzi `Instrumentua` izeneko klase bat definitzen duen programa bat. Eraikitzaileak parametro hauek izan behar ditu, hurrenez hurren: `izena` eta `mota`. Gainera, `jo`  izeneko funtzio bat gehitu behar duzu, mezu bat aterako duena. Baita `info` funztioa, atributuen informazioa duen testu bat itzultzeko.
+Sortu klasearen instantzia bat eta deitu bere funtzioetara.
 
 ```python
 class Instrumentua:
@@ -500,7 +504,7 @@ Hari-gitarra
 
 5.1 Ariketa
 
-Idatz ezazu programa bat, `IzenZuzena` izeneko klase bat definituko duena, eta, bertan, `__init__` eraikitzailea bat `izena` eta `abizena` atributuak hasieratzeko. Gainera, klaseak `zuzendu` izeneko metodo bat izan behar du, `izena` eta `abizena` atributuak zuzenduko dituena. Zuzendu metodoak, lehenengo hizkiak larri eta gainerakoak xehe itzuliko ditu.
+Idatz ezazu programa bat, `IzenZuzena` izeneko klase bat definituko duena, eta, bertan, `__init__` eraikitzailea bat `izena` eta `abizena` atributuak hasieratzeko. Gainera, klaseak `zuzendu` izeneko metodo bat izan behar du, `izena` eta `abizena` atributuak zuzenduko dituena. `zuzendu` metodoak, lehenengo hizkiak larri eta gainerakoak xehe itzuliko ditu.
 
 ```python
 class IzenZuzena:
@@ -536,7 +540,13 @@ Juan Pérez
 
 5.2 Ariketa
 
-Idatz ezazu programa bat `Batuketa`, izeneko klase bat definitzeko, eta bi zenbakirekin idatzi. Bientzako `get` eta `set` funtzioak barne hartzen ditu, eta balio negatiboa esleitzen saiatzen bazaizkie 0 esleitzea kontrolatu behar duzu. Gainera, bi zenbakien batura itzuliko duen `batu` funtzioa izango dute.
+Idatz ezazu programa bat `Batuketa`, izeneko klase bat definitzeko, eta bi zenbakirekin hasieratzeko.
+
+```python
+Batuketa(28, 14)
+```
+
+Bientzako `get` eta `set` funtzioak barne hartzen ditu, eta balio negatiboa esleitzen saiatzen bazaizkie `0` esleitzea kontrolatu behar duzu. Gainera, bi zenbakien batura itzuliko duen `batu` funtzioa izango dute.
 
 ```python
 class Batuketa:
@@ -587,7 +597,7 @@ Emaitza:
 
 5.3 Ariketa
 
-Sortu programa bat `Txanpona` izeneko klase batekin. Klaseak eraikitzaile huts bat izan behar du, eta funtzio bakar bat, `bota` izenekoa. Horren emaitza "aurpegiaren" edo "gurutzearen" artean ausaz aukeratutako *string* bat izan behar da. Sortu klaseko instantzia bat probatzeko.
+Sortu programa bat `Txanpona` izeneko klase batekin. Klaseak eraikitzaile huts bat izan behar du, eta funtzio bakar bat, `bota` izenekoa. Horren emaitza "aurpegiaren" edo "gurutzearen" artean ausaz aukeratutako *string* bat izan behar da. Sortu klasearen instantzia bat probatzeko.
 
 ```python
 import random
@@ -621,11 +631,11 @@ gurutzea
 
 5.4 Ariketa
 
-Sortu programa bat N aurpegiko dado baten portaera simulatzeko, `Dadoa` izeneko klase batekin. Sortu klaseko instantzia bat probatzeko.
+Sortu programa bat N aurpegiko dado baten portaera simulatzeko, `Dadoa` izeneko klase batekin. Sortu klaseko instantzia bat jaurtiketak probatzeko.
 
-- `def __init__ (self, aldeak, zeroOnartu = False)`:  aurpegi-kopurua gordetzen duen atributua eta `zeroOnartu`= Faltsutzea: emandakoak 0 balioa itzul dezakeen esaten digun atributua. Lehenetsitako balioa False da.
-- `def aldeak (self, aldeak):` Parametrodun setter funtzioa. Atributua ezartzen du.
-- `def zeroOnartu (self):`: parametrodun funtzioa, bi atributuak ezartzen ditu.
+- `def __init__ (self, aldeak, zeroOnartu = False)`:  aurpegi-kopurua gordetzen duen atributua eta `zeroOnartu` boolearra: dadoak 0 balioa itzul dezakeen esaten digun atributua. Lehenetsitako balioa `False` da.
+- `def aldeak (self, aldeak):` Parametrodun setter funtzioa. `aldeak` atributua ezartzen du.
+- `def zeroOnartu (self):`: parametrodun setter funtzioa, boolear atributua ezartzen du.
 - `def bota (self)`: funtzio honek dadoaren jaurtiketa simulatzen du eta emaitza bat itzultzen du. Kontuan hartu behar duzu "Onartu zeroa" atributua.
 
 Sor itzazu 6 aurpegiko dado bat, 10 aurpegiko dado bat eta zeroak ahalbidetzen dituen 20 aurpegiko dado bat sortzen duten instantziak, eta egizu bakoitzetik 100 jaurtiketa.
@@ -686,15 +696,15 @@ Emaitza:
 
 5.5 Ariketa
 
-Sortu bi motatako programa bat:
+Sortu bi klase dauzkan programa bat:
 
-1- `Jokalaria` klasea, `izena`, `posizioa` eta `zenbakia` ezaugarriak dituena. Parametro horiek guztiak dituen eraikitzaile bat ere sortu, eta ezaugarri guztiak itzuliko dituen `txosten` izeneko funtzio bat.
-2 - `Taldea` klasea, `izena`, `fundazioa`, `aurrekontua` eta `jokalariak` motako instantziak gordetzeko zerrenda. Honako ezaugarri hauek dituen eraikitzaile bat izan behar du. `Taldea` klaseak beste bi funtzio izango ditu: `jokalariaFitxatu` eta `jokalariakErakutsi`:
+1- `Jokalaria` klasea, `izena`, `posizioa` eta `zenbakia` propietateak dituena. Parametro horiek guztiak dituen eraikitzaile bat ere sortu, eta ezaugarri guztiak itzuliko dituen `txosten` izeneko funtzio bat.
+2 - `Taldea` klasea, `izena`, `fundazioa`, `aurrekontua` propietateekin eta `jokalariak`: `Jokalaria` motako instantziak gordetzeko propietatea (zerrenda izango dena). Honako ezaugarri hauek dituen eraikitzaile bat izan behar du. `Taldea` klaseak beste bi funtzio izango ditu: `jokalariaFitxatu` eta `jokalariakErakutsi`:
 
 - `def jokalariaFitxatu (self, jokalaria)`, zerrendara jokalariak gehitzeko.
-- ` def jokalariakErakutsi (self)`, jokalarien datu guztiak jasotzen dituen kate bat itzultzeko
+- `def jokalariakErakutsi (self)`, jokalarien datu guztiak jasotzen dituen kate bat itzultzeko
 
-Gainera, gehitu bi jokalari eta talde bat sortzeko beharrezkoa den kodea, eta horri jokalariak gehitu eta erakutsiko dizkiozu.
+Gainera, gehitu bi jokalari eta talde bat sortzeko beharrezkoa den kodea, eta horri jokalariak gehitu eta erakutsiko dituzu.
 
 ```python
 class Jokalaria:
@@ -744,10 +754,10 @@ Beckenbauer Defentsa 4
 
 5.6 Ariketa
 
-Sortu zenbait klase barne hartzen dituen programa bat.
+Sortu ondorengo klaseak definitzen dituen programa bat:
 
 1 - `Dispositiboa` klasea: `izena` eta `prezioa` atributuak ditu. Eraikitzaile bat atributuekin, `set` eta `get` eta `toString` funtzioak gehitu (atributuak erakusteko)
-2 - `Mugikorra` klasea: `Dispositiboa` motako azpiklasea da, eta `zenbakia` atributua gehitu behar zaio. Sortu eraikitzailea eta `def toString (self)` metodoa, superklasekoak aprobetxatuz. Gehitu `def deitu (self, zenbakia)` funtzioa, pantailatik "Deitzen zenbakia" esaten duena.
+2 - `Mugikorra` klasea: `Dispositiboa` motako azpiklasea da, eta `zenbakia` atributua gehitu behar zaio. Sortu eraikitzailea eta `def toString (self)` metodoa, superklasekoak aprobetxatuz. Gehitu `def deitu (self, zenbakia)` funtzioa, pantailatik `"Deitzen [zenbakia]"` esaten duena.
 3 - `Ordenadorea` klasea: `Dispositiboa` azpiklasea da, `prozesadorea` atributua gehitu behar zaio. Sortu eraikitzailea eta `def toString (self)` funtzioa superklasekoak aprobetxatuz
 Gainera, mugikorra eta ordenagailua sortzeko behar den kodea idatzi.
 
@@ -828,10 +838,10 @@ Chanmhung telefonoa 434.4 665745345
 
 Txanogorritxo proiektua sortuko dugu, non protagonistak janari saski bat kudeatzen duen. Janari mota askotakoa izango da. Hauek dira egin beharreko klaseak:
 
-1 - `Janaria` klasea: `izena` eta `pisua` atributuak ditu. Eraikitzaile bat atributuak, set eta get eta `toString` funtzio bat erabiltzen, atributuak erakutsiz.
+1 - `Janaria` klasea: `izena` eta `pisua` atributuak ditu. Eraikitzaile bat atributuak, `set` eta `get` eta `toString` funtzio bat erabiltzen, atributuak erakutsiz.
 2 - `Fruta` klasea: `Janaria` klasearen azpiklasea da, eta `bitamina` atributua gehitu behar zaio. Sortu eraikitzailea eta `toString` funtzioa superklaseko kodea berrerabiliz.
 3 - `Goxokia` klasea: `Janaria` klasearen azpiklasea da, eta `kaloria` atributua gehitu behar zaio. Sortu eraikitzailea eta `toString` funtzioa, superklaseko kodea berrerabiliz.
-4 - `Saskia` klasea, `janariak` izeneko atributua du, eta janari klaseko (edo azpiklaseko) elementu arrai bat da: `Futua` eta `Goxokia`. Eraikitzailean hasten da. Hiru funtzio ditu:
+4 - `Saskia` klasea, `janariak` izeneko atributua du, eta janari klaseko (edo azpiklaseko) elementu zerrenda bat da: `Futua` eta `Goxokia`. Eraikitzailean hasten da. Hiru funtzio ditu:
 
 - `def sartuJanaria (hau, janari)` saskian janari bat sartzen du.
 - `def pisuGuztira (hau)` saskiko janariaren guztizko pisua itzultzen du.
