--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -1,10 +1,12 @@
 # Salbuespenak
 
-Baliteke programazioan bikaina izatea. Baina, hala ere, zure programek huts egiten jarrai dezakete, gauza batzuk zure programaren kontroletik kanpo daudelako. Beraz, nahiz eta zure programa zuzena izan, gauzak oker joan daitezke.
+Baliteke programazioan bikaina izatea. Baina, hala ere, zure programek huts egin dezakete, gauza batzuk zure programaren kontroletik kanpo daudelako. Beraz, nahiz eta zure programa zuzena izan, gauzak oker joan daitezke.
 
-Adibidez, zure programak erabiltzaileari zenbaki bat idaztea eskatzen badio, baina erabiltzaileak letrak idazten baditu edo ezer idazten ez badu, zure programak huts egingo du.
-Zure programak fitxategi bat irakurri behar badu, baina fitxategi hori existitzen ez bada, zure programak huts egingo du.
-Zure programak sarera konektatu behar badu, baina zure ordenagailua konektatuta ez badago, zure programak huts egingo du.
+Adibidez:
+- Zure programak erabiltzaileari zenbaki bat idaztea eskatzen badio, baina erabiltzaileak letrak idazten baditu ala ezer idazten ez badu, zure programak huts egingo du.
+- Zure programak fitxategi bat irakurri behar badu, baina fitxategi hori existitzen ez bada, zure programak huts egingo du.
+- Zure programak sarera konektatu behar badu, baina zure ordenagailua konektatuta ez badago, zure programak huts egingo du.
+
 Ikus dezakezunez, egoera batzuetan programak ezin du kontrolik izan. Zorionez, badugu mekanismo bat aukera ematen diguna gauza horietako bat gertatzen bada gure programak huts egin ez dezan eta besterik gabe amai dadin. Eta mekanismo hori salbuespenak dira.
 
 ## Salbuespenak Python-en
@@ -112,7 +114,7 @@ Aurrekoa bezalako testu fitxategi sinpleek informazioa izan dezakete, baina ez d
 Programazioko formatu ezagunenetako bat JSON formatua da. Python-en hiztegi egituren antza duen formatua da. Python lengoaiaren zerrendak bezala ere irudikatzeko aukera badu.
 
 Hurrengo edukia JSON formatuan dago. Hainbat objektu dituen zerrenda da.
-Fija zaitez, JSON *motako objektuak Python-eko hiztegien berdinak dira!*:
+Fija zaitez, JSON **motako objektuak Python-eko hiztegien berdinak dira!**:
 
 ```python
 [
@@ -124,7 +126,7 @@ Fija zaitez, JSON *motako objektuak Python-eko hiztegien berdinak dira!*:
 
 Formatu horren alde ona da gure Python programara erraz inporta daitekeela, betiere zuzena bada, noski.
 
-Eduki hori irakurri eta datu horiek hiztegi zerrenda bihurtzeko, `json, 'liburu-denda erabiliko dugu.
+Eduki hori irakurri eta datu horiek hiztegi zerrenda bihurtzeko, `json` liburutegia erabiliko dugu.
 Fitxategi horren edukia automatikoki kargatu ahal izango dugu aldagai batean. Hortik aurrera, eduki hori guztia zerrenda gisa erabili ahal izango dugu, non elementu bakoitza hiztegi bat den!:
 
 ```python
@@ -139,7 +141,7 @@ for pertsonaia in edukia:
 fitxategiarea.close()
 ```
 
-Pantaila batetik, hau ikusiko dugu:
+Pantailan, hau ikusiko dugu:
 
 ```console
 Ada
@@ -152,7 +154,7 @@ Bug
 Fitxategiak idazteko, prozesua antzekoa da, baina bi gauza egin behar ditugu:
 
 - Fitxategia idazkera moduan irekitzea.
-- Erabili `write` funtzioa edukia idazteko.
+- `write` funtzioa erabili edukia idazteko.
 
 Kode honekin, testu-lerro pare bat idatziko ditugu fitxategian:
 
@@ -164,14 +166,14 @@ fitxategia.close()
 ```
 
 KONTUZ! Horrela idazten badugu, fitxategiaren edukia ezabatuko baitugu.
-Fitxategiaren edukia:
+Fitxategiaren edukia horrela geratuko litzateke:
 
 ```console
 Lerro bat idazten dut
 Beste lerro bat idazten dut
 ```
 
-Edukia fitxategiaren amaieran gehitu nahi badugu, fitxategia `"a"` moduan ireki behar dugu:
+Edukia fitxategiaren amaieran gehitu nahi badugu, fitxategia `"a"` (_append_) moduan ireki behar dugu:
 
 ```python
 fitxategia = open("testua.txt", "a")
@@ -268,7 +270,7 @@ def pasahitzaSortu (luzera):
     return pasahitza
 ```
 
-Eta fitxategian erabiltzen dugu:
+Eta fitxategian honela erabiliko genuke:
 
 ```python
 import sortu
@@ -288,7 +290,7 @@ Klaseekin gauza bera egin daiteke. Demagun `PantailaIrakurgailua` izeneko klasea
 
 ```python
 class PantailaIrakurgailua:
-  def irakurZenbaki self, mensaje = "Sartu zenbaki bat:"):
+  def irakurZenbaki (self, mensaje = "Sartu zenbaki bat:"):
     numero = input (mezua)
     return int (zenbakia)
 
@@ -319,7 +321,7 @@ Sartu zenbaki bat: 6
 
 Definitu `Menu` izeneko klase bat, honako funtzio hauek dituena:
 
-1. `def init__(self)`: aukeren zerrenda bat jasotzen du parametro gisa.
+1. `def init__(self, aukerak)`: aukeren zerrenda bat jasotzen du parametro gisa.
 2. `def erakutsi(self)`: aurretik zenbaki bat duen aukerak erakusten ditu, `print` deituz.
 3. `def hautatu (self, zenbakia)` Itzuli `True`, baldin eta aukeratutako zenbakia menuan badago; bestela, itzuli `False`.
 
@@ -369,7 +371,7 @@ Oraingo 1. aukera
 
 Sortu `Fitxategia` izeneko klase bat, honako funtzio hauekin:
 
-1. `def __init__ (self, fitxategia)`: ireki beharreko fitxategia jasotzen du parametro gisa.
+1. `def __init__ (self, fitxategiIzena)`: ireki beharreko fitxategi izena jasotzen du parametro gisa.
 2. `def irakurri (self)`: fitxategiaren edukia jasotzen duen kate bat itzultzen du.
 3. `def idatzi (self, edukia)`: fitxategian parametro gisa pasatzen zaion edukia idazten du.
 
@@ -379,18 +381,18 @@ Fitxategia:
 
 ```python
 class Fitxategia:
-  def __init__(self, nombreFichero):
-      self._nombreFichero = nombreFichero
+  def __init__(self, fitxategiIzena):
+      self._fitxategiIzena = fitxategiIzena
 
   def irakurri(self):
-      fitxategia = open(self._nombreFichero, "r")
+      fitxategia = open(self._fitxategiIzena, "r")
       datuak = fitxategia.read()
       fitxategia.close()
 
       return datuak
 
   def idatzi(self, eduki):
-      fitxategia = open(self._nombreFichero, "w+")
+      fitxategia = open(self._fitxategiIzena, "w+")
       fitxategia.write(eduki)
       fitxategia.close()
 ```
@@ -426,12 +428,12 @@ Edukia: Edukia aldatuta!!! 2024-08-23
 
 Sor ezazu `Zerrenda` izeneko klase bat, honako funtzio hauekin:
 
-1. `def __init__ (self, fitxategia)`: json fitxategi baten izena hartzen du parametrotzat, eta haren edukia zerrenda batean kargatu behar da. Zerrenda hori atributu gisa definituko da. Edukiak hiztegi-zerrenda bat izan behar du, formato honekin `[{"id": 1, "izena": "Juan"}, {...}]
-2. `def (self, izena)`: `True` ala `False` itzuli parametro gisa pasatzen den `izena` zerrendan badago.
+1. `def __init__ (self, fitxategiIzena)`: json fitxategi baten izena hartzen du parametrotzat, eta haren edukia zerrenda batean kargatu behar da. Zerrenda hori atributu gisa definituko da. Edukiak hiztegi-zerrenda bat izan behar du, formato honekin `[{"id": 1, "izena": "Juan"}, {...}]
+2. `def existitzenDa(self, izena)`: `True` ala `False` itzuli parametro gisa pasatzen den `izena` zerrendan badago.
 3. `def xehetu (self)`: zerrendako izen guztiak letra xeheetara pasatu behar dira.
-4. `def posizioa (self, nombre)`: izen hori dagoen posizioa itzuli behar duzu.
+4. `def posizioa (self, izena)`: izen hori dagoen posizioa itzuli behar duzu.
 
-Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
+Gero, klase hau erabili behar duzu beste fitxategi batean inportatuz.
 
 Zerrenda fitxategia:
 
@@ -527,7 +529,7 @@ Sor ezazu `Zereginak` klase bat, honako funtzio hauekin:
 4- `def gorde (self)`: gorde zerrenda `zeregina.json` fitxategian.
 5- `def erakutsi (self)`: string batean itzultzen ditu zeregin guztiak.
 
-Gero, klasea erabili behar duzu beste fitxategi batean inportatuz.
+Gero, klase hau erabili behar duzu beste fitxategi batean inportatuz.
 
 Fitxategia: `zereginak.py`
 
@@ -620,20 +622,20 @@ Emaitza:
 
 6.3 Ariketa
 
-Sor ezazu `Jokalaria` izeneko klase bat, eta eduki hau izango du:
+Sor ezazu `Jokalaria` izeneko klase bat, eduki hau izango duena:
 
 1. `def __init__ (self, izena, zenbakia)`: parametroak esleitzen dizkie `_izena` eta `_zenbakia`, atributuei.
-2. Get/set metodoak izenerako eta dortserako.
+2. `get`/`set` metodoak izenerako eta dortserako.
 3. `def info (self)`: *string* bat itzultzen du jokalariaren informazioarekin.
 
-Sor ezazu `Taldea` izeneko klase bat, eta eduki hau izango du:
+Sor ezazu `Taldea` izeneko klase bat, eduki honekin:
 
 1. `def karga(self)`:  `jokalariak.json` izeneko fitxategi bat ireki behar duzu. Fitxategi horrek jokalari-hiztegien zerrenda bat izango du [{"izena": "Pele", "dortsala": 10}, {).
-Eta fitxategiaren objektu bakoitzeko, "JUgadora" motako instantzia bat sortu behar duzu, eta `this._jugadores`izeneko zerrenda batean sartu.
+Eta fitxategiaren objektu bakoitzeko, `Jokalaria` motako instantzia bat sortu behar duzu, eta `this._jokalariak`izeneko zerrenda batean sartu.
 2. `def erakutsi (self)`: jokalarien zerrenda osoa erakutsi behar duzu.
-3. `def fitxaketa (self, izena, dortsala)`: jokalari berri bat sartu behar duzu zerrendan," JUgadora "ren instantzia bat sortuz.
+3. `def fitxaketa (self, izena, dortsala)`: jokalari berri bat sartu behar duzu zerrendan,`Jokalaria`ren instantzia bat sortuz.
 
-Ikasgelan, `Jugadora` klasea inportatu beharko duzu, erabili ahal izateko.
+`Taldea` klasea, `Jokalaria` klasea inportatu beharko duzu, erabili ahal izateko.
 
 `jokalaria.py` 'fitxategia:
 
