Added last change

--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -24,7 +24,7 @@ Oharra:
 Agian entzuna duzu ordenagailuek adimen artifiziala izan dezaketela edo baliteke bideojokoetan etsaiak zu baino azkarragoak iruditzea. Egia esan, ordenagailuak jokabide adimendunak imitatzen dituzten programak exekutatzen ditu.
 
 2. oharra:
-Ohiko programazio-ingurune bat instalatu nahi baduzu, zoaz eranskinera.
+Ohiko programazio-ingurune bat instalatu nahi baduzu, zoaz bukaerako eranskin kapitulura.
 
 # Programazio ingurunea
 
