--- a/book_eu/07.md
+++ b/book_eu/07.md
@@ -2,35 +2,48 @@
 
 Python-i buruz
 
-Zergatik aukeratu dugu Python? Bere abantaila ugariengatik. Lengoai interpretatua da, sintaxi oso erraza duena, eta horrek ikasteko oso erraza egiten du. Ez da kezkatu behar (ez asko behintzat) datu motaz. Kontuan hartu behar dugun bakarra: bloke bakoitzeko tabulazioak errespetatzea da.
+Zergatik aukeratu dugu Python? Bere abantaila ugariengatik. Lengoai interpretatua da, sintaxi oso erraza duena, eta ikasteko oso erraza da. Ez zara kezkatu behar (ez asko behintzat) datu motaz. Kontuan hartu behar dugun bakarra zera da: bloke bakoitzeko tabulazioak errespetatzea.
 
 Hala ere, ez da ahaztu behar helburua ez dela programazio lengoai hau ikastea, baizik eta programazioaren funtsak ikastea; eta Pythonek zeregin hori errazten du.
 
 Gainera, oso lengoai erabilgarria da, oso hedatua eta profesionalki erabilia. Hori gutxi balitz, programatzaileek asko estimatzen dute, eta horrek kodea, liburutegi mordoa eta elkar laguntzen duten pertsonen komunitate izugarria dakar.
 
-Pythonek bi bertsio berezi ditu, 2 eta 3. Liburu honetan 3. sintaxia eta estiloa erabiltzen saiatu gara, egunean gehien dagoena erabiltzeagatik eta 2 bertsioa desagertzen ari delako.
+Pythonek bi bertsio berezi ditu, 2 eta 3. Liburu honetan 3. sintaxia eta estiloa erabili dugu, gaur egungoa delako eta 2. bertsioa desagertutzat ematen delako.
 
 ## Python zure ordenadorean instalatzen
 
 Web bidez landu badaiteke, baina nahi baduzu zure ordenagailuan instalatu, hemen duzu nola egin.
-Nahikoa da [python site] ra joatea (https://www.python.org) eta 3. bertsioaren instalatzailea deskargatzea. Instalazioa pixka bat aldatzen da zure sistemaren arabera, baina, funtsean, honako hau litzateke:
+Nahikoa da [python gune](https://www.python.org)ra joatea  eta 3. bertsioaren instalatzailea deskargatzea. Instalazioa pixka bat aldatzen da zure sistemaren arabera, baina, funtsean, honako hau litzateke:
 
 - Windows: instalatzailea deskargatu, exekutatu eta urrats bakoitza berretsi.
 - Mac: berdin-berdin.
-- Linux: ziur aski seriean instalatuta izango duzu, edo, beharbada, ez duzu azalpenik behar ;)
+- Linux: ziur aski berez instalatuta izango duzu, edo, beharbada, ez duzu azalpenik behar ;)
+
+Behin Python instalatuta, programak idatzi eta horiek exekutatu behar dira kontsolan.
+Kontsolan, gure Python programa dagoen direktorio berdinean horrelako zerbait exekutatuko dugu:
+
+```console
+python3 programa.py
+```
+
+edo
+
+```console
+python programa.py
+```
 
 ## Kode editoreak
 
 Koderako editore bat erabili nahi baduzu, aukera asko dituzu, baina honako hauek nabarmenduko ditugu:
 
-- [pycharm] (http://www.jetbrains.com/pycharm /) Editore profesionala eta doakoa.
-- [code] (https://vscode.io)
+- [pycharm] (http://www.jetbrains.com/pycharm /) Editore profesionala eta doakoa. Pisutsua.
+- [code] (https://vscode.io) Visual Studio Code, Microsoft-ek garatutako editorea. Arina.
 - [pydev] (http://pydev.org)
 - [sublime] (http://www.sublimetext.com)
 
 ## Test unitarioak
 
-Test unitarioak kodea ondo eginda daudela egiaztatzen duten programak dira. Funtsean, funtzioak emaitza zuzena dela egiaztatzen duten programak dira.
+Test unitarioak kodea ondo eginda dagoela egiaztatzen duten programak dira. Funtsean, funtzioak emaitza zuzena dela egiaztatzen duten programak dira.
 Testak egiteko hainbat liburutegi daude, baina Python-en `unittest` lehenetsia dago, eta, beraz, ez dago ezer instalatu beharrik.
 
 Demagun kalkulagailu bat errepresentatzen duen klase hau dugula:
@@ -50,7 +63,7 @@ class Kalkulagailua:
     return a / b
 ```
 
-Mota horretako test unitarioak egiteko, nahikoa litzateke beste mota hau sortzea, eta hori `unittest` liburutegiaren testa-mota baten oinordekoa izango litzateke. `Kalkulagailua` bera ere inportatu behar dugu, proban jarri behar baitugu.
+Mota horretako test unitarioak egiteko, nahikoa litzateke beste klase hau sortzea, eta hori `unittest` liburutegiaren testa-mota baten oinordekoa izango litzateke. `Kalkulagailua` bera ere inportatu behar dugu, proban jarri behar baitugu.
 Klaseko funtzio bakoitzak kalkulagailuaren funtzio bakoitza egiaztatzen du. Nahi adina test egin daitezke, funtzioek behar dutena egiten dutela frogatzeko. Ikus dezakezunez, test bakoitzak funtzio bat exekutatzen du funtsean, eta emaitza esperotakoa dela egiaztatzen du, honako hau erabiliz:
 
 ```python
@@ -59,7 +72,7 @@ def test_batu (self):
   self.assertEqual(kal.batu(40, 2), 42)
 ```
 
-Fitxategi `kalkulatzailea.test.py:
+kalkulatzailea.test.py` fitxategi osoa honako hau izango litzateke:
 
 ```python
 import unittest
@@ -114,19 +127,19 @@ Collecting distlib < 1, > = 0.3.1
 ...
 ```
 
-`virtualenv` proiektu berri bat sor dezakegu:
+`virtualenv` proiektu berri bat sor dezakegu honela:
 ```console
 virtualenv proiektua
 ```
 
 Eta horrek `proiektua` izeneko karpeta sortuko du.
-Jarraian, proiektuaren ingurune birtuala aktibatu behar dugu, honako hauek gauzatuz:
+Jarraian, proiektuaren ingurune birtuala aktibatu behar dugu, honako hau exekutatuz:
 
 ```console
 source proiektua/bin/activate
 ```
 
-Orain, kodea gehitu dezakegu edo dependentziak instalatu.
+Orain, kodea gehitu dezakegu edo dependentziak instalatu. Depententziak gure proiektuan erabiliko ditugun liburutegien zerrenda da.
 Horretarako, `requirements.txt` izeneko testu-fitxategi bat sortzea komeni da. Fitxategi horrek formatu hau izan behar du:
 
 ```console
@@ -147,14 +160,14 @@ pygame = 1.9.6
 unittest
 ```
 
-Eta gero pakete hori eta beste batzuk instalatu genitzake, pip3 pakete kudeatzailerarekin:
+Eta gero pakete hori eta beste batzuk instalatu genitzake, `pip3` (edo `pip`) pakete kudeatzailerarekin:
 
 ```console
 source bin/activate
 pip3 install -r requirements.txt
 ```
 
-Beste aukera bat da pip3 duten beharrezko paketeak instalatzea:
+Beste aukera bat da `pip3`ekin zuzenean liburutegiak instalatzea:
 
 ```console
 pip3 install pygame
