--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -30,21 +30,29 @@ Ohiko programazio-ingurune bat instalatu nahi baduzu, zoaz bukaerako eranskin ka
 
 Interneterako konexioa duen edozein ordenagailutan sartu:
 
-https://repl.it /
+https://repl.it/
 
-![Site de replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/00.png)
+Hortik, `Sign up for free` sakatu
 
-Hortik, `Start coding` sakatu
+![replt.it gunea](images/00.png)
 
-![Start Coding replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/01.png)
+Kontu berria sortu edo Google kontuarekin konektatu:
 
-Eta hautatu **Python** lengoaia:
+![Gmail bidez edo kontu berria sortu](book/images/01.png)
 
-![Python en replt.it hautaketa] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/02.png)
+Behien repl.it barruan zaudela, new repl botoia sakatu:
 
-Behin hori eginda, programazio ingurunea kargatuko da:
+![New Repl](book/images/02.png)
 
-![Replt.it garapen-ingurunea] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/03.png)
+
+Hurrengo pantaila ikusiko duzu. Bilatu **Python** eta hasieratu ingurunea
+
+![Python aukeratu](book/images/03.png)
+
+Behin hori eginda, programazio ingurunea kargatuko da, hiru gune nagusi dira hemen:
+
+![New Repl](book/images/04.png)
+
 
 - Ezkerrean, programa idazteko editorea duzu.
 - Eskuinean, kontsola, non ikusiko duzun emaitza programa exekutatzen duzunean.
