--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -324,9 +324,9 @@ Ada 66555333
 Oharra:
 Beste hizkuntza batzuetan, hiztegiei `hash`, `hashtable` edo "mapak" esaten zaie.
 
-## Datu konbinatuen egiturak
+## Datu kabiatuen egiturak
 
-Oinarrizko egiturek, hala nola zerrendek eta hiztegiek, zerrendak eta hiztegiak eduki  ditzakete habiatuta.
+Oinarrizko egiturek, hala nola zerrendek eta hiztegiek, zerrendak eta hiztegiak eduki ditzakete kabiatuta.
 
 Datu egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun baten datuak hiztegi honekin irudikatu nahi dituzula:
 
